# dotfiles

./: .bash_profile  .bashrc  .bashrc_MacBookPro  .gemrc  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .pre-commit-config.yaml  .profile  .railsrc  .ssh-auto-completion.sh  .stowrc  .tmux.conf  .vimrc  LICENSE  README.md  bash_profile  bashrc  bootstrap  bootstrap.sh  gemrc  gitconfig  gitignore_global  gitk  install  install.sh  justfile  npmrc  pyproject.toml  railsrc  requirements.in  requirements.txt  symlink.sh  vimrc
ansible/: README.md  playbook.yml
ansible/host_vars/: localhost
conf/osx/: build-mvim.sh  mvim.sh
conf/python/: requirements.txt  requirements3.txt
conf/rust/: crates.txt
conf/sublime/: Markdown.sublime-settings  Preferences.sublime-settings  RustAutoComplete.sublime-settings
copy/: .gitconfig  .gitconfig.local
git-hooks/: README.md  install-hooks.sh  post-checkout  post-merge
init/: 10_macos_xcode.sh  10_osx_xcode.sh  20_macos_homebrew.sh  20_osx_homebrew.sh  20_ubuntu_apt.sh  30_macos_homebrew_casks.sh  30_macos_homebrew_recipes.sh  30_osx_homebrew_casks.sh  30_osx_homebrew_recipes.sh  50_vim.sh
link/: .bash_profile  .bashrc_Darwin  .bashrc_MacBookPro  .gitconfig  .gitignore_global  .gitk  .ideavimrc  .ssh-auto-completion.sh  .tmux.conf  .vimrc
source/: 00_common.sh  00_dotfiles.sh  10_macos.sh  10_ubuntu.sh  10_ubuntu_debian.sh  20_editor.sh  20_file.sh  20_misc.sh  20_prompt.sh  30_misc.sh  40_macos.sh  40_osx.sh  40_ubuntu.sh  50_editor.sh  50_file.sh  50_history.sh  50_misc.sh  50_osx.sh  50_prompt.sh  60_MacBookPro.sh
(+43 files in other folders)
