[project]
name = "dotfiles"
version = "0.1.0"
description = "Bob Gardner's dotfiles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.1.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[tool.ruff]
extend-exclude = ["stow/zsh/.oh-my-zsh"]

[tool.ruff.lint]
extend-select = ["I"]
